Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetBoolObj.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
