Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjBooleanRetintegerFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
